--- a/windows/plugin.vcxproj
+++ b/windows/plugin.vcxproj
@@ -235,6 +235,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="$(FlutterPluginName)_plugin.h" />
+    <ClInclude Include="RTMChannel.h" />
     <ClInclude Include="RTMClient.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -244,6 +245,7 @@
     <ClCompile Include="$(FLUTTER_EPHEMERAL_DIR)\cpp_client_wrapper\engine_method_result.cc" />
     <ClCompile Include="$(FLUTTER_EPHEMERAL_DIR)\cpp_client_wrapper\plugin_registrar.cc" />
     <ClCompile Include="$(FLUTTER_EPHEMERAL_DIR)\cpp_client_wrapper\standard_codec.cc" />
+    <ClCompile Include="RTMChannel.cpp" />
     <ClCompile Include="RTMClient.cpp" />
   </ItemGroup>
   <ItemGroup>
