--- a/windows/plugin.vcxproj.filters
+++ b/windows/plugin.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="RTMClient.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="RTMChannel.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="$(FLUTTER_EPHEMERAL_DIR)\cpp_client_wrapper\plugin_registrar.cc">
@@ -45,6 +48,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="RTMClient.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="RTMChannel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
