--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           channel: 'dev'
       - run: |
-          cd C:\hostedtoolcache\windows\flutter\1.19.0-3.0.pre-dev\x64
+          Get-Command flutter | Get-Item | Split-Path | Set-Location; Set-Location ..
           git clean -xdf; git fetch; git checkout -b master
           flutter config --enable-windows-desktop
           cd -
