--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,12 @@ jobs:
       - uses: actions/checkout@v1
       - uses: subosito/flutter-action@v1.3.0
         with:
-          channel: 'dev'
-      - run: flutter config --enable-macos-desktop
+          channel: 'beta'
+      - run: |
+          cd $(dirname $(which flutter)) && cd ..
+          git clean -xdf; git fetch; git checkout -b dev
+          flutter config --enable-macos-desktop
+          cd -
       - run: cd example && flutter packages get && flutter build macos -v
 
   build-windows:
@@ -24,7 +28,7 @@ jobs:
       - uses: actions/checkout@v1
       - uses: subosito/flutter-action@v1.3.0
         with:
-          channel: 'dev'
+          channel: 'beta'
       - run: |
           Get-Command flutter | Get-Item | Split-Path | Set-Location; Set-Location ..
           git clean -xdf; git fetch; git checkout -b master
