--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -13,12 +13,14 @@ apply_standard_settings(${PLUGIN_NAME})
 set_target_properties(${PLUGIN_NAME} PROPERTIES
   CXX_VISIBILITY_PRESET hidden)
 target_compile_definitions(${PLUGIN_NAME} PRIVATE FLUTTER_PLUGIN_IMPL)
-target_include_directories(${PLUGIN_NAME} INTERFACE
-  "${CMAKE_CURRENT_SOURCE_DIR}/include")
-target_link_libraries(${PLUGIN_NAME} PRIVATE flutter flutter_wrapper_plugin)
+target_include_directories(${PLUGIN_NAME}
+  INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/include"
+  PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/sdk/include")
+find_library(AGORA_RTM_LIB agora_rtm_sdk "${CMAKE_CURRENT_SOURCE_DIR}/sdk/lib")
+target_link_libraries(${PLUGIN_NAME} PRIVATE flutter flutter_wrapper_plugin ${AGORA_RTM_LIB})
 
 # List of absolute paths to libraries that should be bundled with the plugin
 set(agora_rtm_bundled_libraries
-  ""
+  "${CMAKE_CURRENT_SOURCE_DIR}/sdk/dll/agora_rtm_sdk.dll"
   PARENT_SCOPE
 )
